--- a/_modules/flight_mech/turbine.html
+++ b/_modules/flight_mech/turbine.html
@@ -378,7 +378,7 @@
     <span class="n">StandardAtmosphere</span><span class="p">,</span>
     <span class="n">compute_air_sound_speed</span>
 <span class="p">)</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">flight_mech.fuel</span><span class="w"> </span><span class="kn">import</span> <span class="n">FuelTypes</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">flight_mech.fuel</span><span class="w"> </span><span class="kn">import</span> <span class="n">FuelTable</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">flight_mech._common</span><span class="w"> </span><span class="kn">import</span> <span class="n">plot_graph</span>
 
 <span class="c1">#############</span>
@@ -422,7 +422,7 @@
     <span class="n">atmosphere_model</span> <span class="o">=</span> <span class="n">StandardAtmosphere</span>
 
     <span class="n">mode</span><span class="p">:</span> <span class="n">Literal</span><span class="p">[</span><span class="s2">&quot;design&quot;</span><span class="p">,</span> <span class="s2">&quot;operation&quot;</span><span class="p">]</span> <span class="o">=</span> <span class="s2">&quot;design&quot;</span>
-    <span class="n">fuel</span> <span class="o">=</span> <span class="n">FuelTypes</span><span class="o">.</span><span class="n">KEROSENE</span>
+    <span class="n">fuel</span> <span class="o">=</span> <span class="n">FuelTable</span><span class="o">.</span><span class="n">KEROSENE</span>
 
     <span class="nd">@property</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">ambient_pressure</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
