--- a/genindex.html
+++ b/genindex.html
@@ -737,13 +737,15 @@
         <li><a href="gas_module.html#module-gas_models">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.fuel.html#flight_mech.fuel.FuelTable.GASOLINE">GASOLINE (flight_mech.fuel.FuelTable attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.get_chord_incidence">get_chord_incidence() (flight_mech.airfoil.Airfoil method)</a>
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.get_rotated_selig_arrays">get_rotated_selig_arrays() (flight_mech.airfoil.Airfoil method)</a>
+</li>
+      <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.global_efficiency">global_efficiency (flight_mech.turbine.TurbojetSingleBody property)</a>
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.ground_effect_coefficient">ground_effect_coefficient (flight_mech.plane.Plane attribute)</a>
 </li>
@@ -966,6 +968,8 @@
 </li>
       <li><a href="flight_mech.motor.html#flight_mech.motor.ElectricalMotor.power">power (flight_mech.motor.ElectricalMotor property)</a>
 </li>
+      <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.propulsive_efficiency">propulsive_efficiency (flight_mech.turbine.TurbojetSingleBody property)</a>
+</li>
       <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.Ps8">Ps8 (flight_mech.turbine.TurbojetSingleBody property)</a>
 </li>
   </ul></td>
@@ -1056,6 +1060,8 @@
 </li>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.taper_ratio">taper_ratio (flight_mech.wing.Wing property)</a>
 </li>
+      <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.thermal_efficiency">thermal_efficiency (flight_mech.turbine.TurbojetSingleBody property)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.thickness_array">thickness_array (flight_mech.airfoil.Airfoil property)</a>
@@ -1112,7 +1118,9 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.v8">v8 (flight_mech.turbine.TurbojetSingleBody property)</a>
+      <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.V0">V0 (flight_mech.turbine.TurbojetSingleBody property)</a>
+</li>
+      <li><a href="flight_mech.turbine.html#flight_mech.turbine.TurbojetSingleBody.V8">V8 (flight_mech.turbine.TurbojetSingleBody property)</a>
 </li>
   </ul></td>
 </tr></table>
