--- a/genindex.html
+++ b/genindex.html
@@ -948,10 +948,10 @@
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.plot">plot() (flight_mech.airfoil.Airfoil method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.plot_2D">plot_2D() (flight_mech.wing.Wing method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="flight_mech.wing.html#flight_mech.wing.Wing.plot_3D">plot_3D() (flight_mech.wing.Wing method)</a>
 </li>
       <li><a href="flight_mech.airfoil.html#flight_mech.airfoil.Airfoil.plot_CL_graph">plot_CL_graph() (flight_mech.airfoil.Airfoil method)</a>
@@ -962,8 +962,12 @@
 </li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.plot_gliding_WV_graph">plot_gliding_WV_graph() (flight_mech.plane.Plane method)</a>
 </li>
-      <li><a href="flight_mech.motor.html#flight_mech.motor.ElectricalMotor.plot_graph">plot_graph() (flight_mech.motor.ElectricalMotor method)</a>
+      <li><a href="flight_mech.atmosphere.html#flight_mech.atmosphere.AtmosphereModel.plot_graph">plot_graph() (flight_mech.atmosphere.AtmosphereModel method)</a>
+
+      <ul>
+        <li><a href="flight_mech.motor.html#flight_mech.motor.ElectricalMotor.plot_graph">(flight_mech.motor.ElectricalMotor method)</a>
 </li>
+      </ul></li>
       <li><a href="flight_mech.plane.html#flight_mech.plane.Plane.plot_polar_graph">plot_polar_graph() (flight_mech.plane.Plane method)</a>
 </li>
       <li><a href="flight_mech.motor.html#flight_mech.motor.ElectricalMotor.power">power (flight_mech.motor.ElectricalMotor property)</a>
